@@ -376,9 +376,7 @@ void ClassicRollingBallCollision(short itemNum, ItemInfo* lara, CollisionInfo* c
 
 void ClassicRollingBallControl(short itemNum)
 {
-	short roomNum;
-	int y1, y2, ydist, x, z, dist, oldx, oldz;
-	FloorInfo* floor;
+	int ydist, dist;
 	GameVector* old;
 	ROOM_INFO* r;
 
@@ -403,18 +401,17 @@ void ClassicRollingBallControl(short itemNum)
 		else if (item->Animation.ActiveState == 0)
 			item->Animation.TargetState = 1;
 
-		oldx = item->Pose.Position.x;
-		oldz = item->Pose.Position.z;
+		int oldx = item->Pose.Position.x;
+		int oldz = item->Pose.Position.z;
+
 		AnimateItem(item);
-		roomNum = item->RoomNumber;
-		floor = GetFloor(item->Pose.Position.x, item->Pose.Position.y, item->Pose.Position.z, &roomNum);
-		if (item->RoomNumber != roomNum)
-			ItemNewRoom(itemNum, item->RoomNumber);
 
-		item->Floor = GetFloorHeight(floor, item->Pose.Position.x, item->Pose.Position.y, item->Pose.Position.z);
+		auto coll = GetCollision(item->Pose.Position.x, item->Pose.Position.y, item->Pose.Position.z, item->RoomNumber);
 
-		TestTriggers(item, true);
-		DoVehicleCollision(item, CLICK(1.5f));
+		item->Floor = coll.Position.Floor;
+
+		if (item->RoomNumber != coll.RoomNumber)
+			ItemNewRoom(itemNum, coll.RoomNumber);
 
 		if (item->Pose.Position.y >= item->Floor - CLICK(1))
 		{
@@ -443,15 +440,11 @@ void ClassicRollingBallControl(short itemNum)
 			ydist = BLOCK(1);
 		}
 
-		x = item->Pose.Position.x + dist * phd_sin(item->Pose.Orientation.y);
-		z = item->Pose.Position.z + dist * phd_cos(item->Pose.Orientation.y);
+		int x = item->Pose.Position.x + dist * phd_sin(item->Pose.Orientation.y);
+		int z = item->Pose.Position.z + dist * phd_cos(item->Pose.Orientation.y);
 
-		floor = GetFloor(x, item->Pose.Position.y, z, &roomNum);
-		y1 = GetFloorHeight(floor, x, item->Pose.Position.y, z);
-
-		roomNum = item->RoomNumber;
-		floor = GetFloor(x, item->Pose.Position.y - ydist, z, &roomNum);
-		y2 = GetCeiling(floor, x, item->Pose.Position.y - ydist, z);
+		int y1 = GetCollision(x, item->Pose.Position.y, z, item->RoomNumber).Position.Floor;
+		int y2 = GetCollision(x, item->Pose.Position.y - ydist, z, item->RoomNumber).Position.Ceiling;
 
 		if (y1 < item->Pose.Position.y || y2 > (item->Pose.Position.y - ydist))
 		{
@@ -492,6 +485,9 @@ void ClassicRollingBallControl(short itemNum)
 			RemoveActiveItem(itemNum);
 		}
 	}
+
+	TestTriggers(item, true);
+	DoVehicleCollision(item, CLICK(1.5f));
 }
 
 void InitializeClassicRollingBall(short itemNum)
